Updated the library location

--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -11,8 +11,8 @@
       </div>
         <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
-        <script src="../libsandstuff/jquery.transform.js/jquery.transform.light.js"></script>
-        <script src="../libsandstuff/raphael/raphael.js"></script>
+        <script src="../lib/jquery.transform.js/jquery.transform.light.js"></script>
+        <script src="../lib/raphael/raphael.js"></script>
         <script src="../build/jsav.js"></script>
         <script>
         // this is what I would imagine the ShellSort visualization implementation 
