--- a/test/index.html
+++ b/test/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>JSAV Test Suite</title>
-	<link rel="Stylesheet" media="screen" href="../libsandstuff/qunit/qunit/qunit.css" />
+	<link rel="stylesheet" media="screen" href="../lib/qunit/qunit/qunit.css" />
+	<link rel="stylesheet" href="../examples/jsav.css" media="screen" />
 	<!-- Includes -->
   <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
-  <script src="../libsandstuff/jquery.transform.js/jquery.transform.light.js"></script>
-  <script src="../libsandstuff/raphael/raphael.js"></script>
+  <script src="../lib/jquery.transform.js/jquery.transform.light.js"></script>
+  <script src="../lib/raphael/raphael.js"></script>
 	
 	<script src="../src/core.js"></script>
 	<script src="../src/anim.js"></script>
@@ -17,7 +18,7 @@
 	<script src="../src/datastructures.js"></script>
 	<script src="../src/layout.js"></script>
 
-	<script src="../libsandstuff/qunit/qunit/qunit.js"></script>
+	<script src="../lib/qunit/qunit/qunit.js"></script>
 	<script src="data/testrunner.js"></script>
 
 	<script src="unit/core.js"></script>
