--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -27,64 +27,64 @@
 
           origarr = arr.clone(); // clone for showing the array comparison, not added to document yet (not showed)
 
-        av.message("During each iteration, Shellsort breaks the list into disjoint sublists so that each element in a sublist is a fixed number of positions apart. For example, let us assume for convenience that n, the number of values to be sorted, is a power of two."); // message to be shown initially
+        av.umsg("During each iteration, Shellsort breaks the list into disjoint sublists so that each element in a sublist is a fixed number of positions apart. For example, let us assume for convenience that n, the number of values to be sorted, is a power of two."); // message to be shown initially
         // create a new step to the visualization, a given message
-        av.step().message("One possible implementation of Shellsort will begin by breaking the list into n/2 sublists of 2 elements each, where the array index of the 2 elements in each sublist differs by n/2. We say that the increment is n/2. If there are 16 elements in the array indexed from 0 to 15, there would initially be 8 sublists of 2 elements each. The first sublist would be the elements in positions 0 and 8...");
+        av.step().umsg("One possible implementation of Shellsort will begin by breaking the list into n/2 sublists of 2 elements each, where the array index of the 2 elements in each sublist differs by n/2. We say that the increment is n/2. If there are 16 elements in the array indexed from 0 to 15, there would initially be 8 sublists of 2 elements each. The first sublist would be the elements in positions 0 and 8...");
 
        // av.ds.variable("increment", 8); // display a variable named increment with value 8
         arr.css(function(index, item) { return index%8 != 0;}, {"opacity": 0.5}).highlight([0, 8]); // set opacity to 0.5 for the whole array, then highlight indices 0 and 8
-        av.step().message("... the second in positions 1 and 9..."); // another way to specify a message for a step
+        av.step().umsg("... the second in positions 1 and 9..."); // another way to specify a message for a step
         arr.unhighlight().highlight([1, 9]);
         for (var i=2; i<8; i++) { // loop through the rest of the array sublists
-          av.step().message("... and so on ...");
+          av.step().umsg("... and so on ...");
           console.log("unhighlighting ", i-1, i+7, "highlighting", i, i+8);
           arr.unhighlight([i-1, i+7]).highlight([i, i+8]);
         }
 
-        av.step().message("Each sublist of two is sorted using Insertion Sort.");
+        av.step().umsg("Each sublist of two is sorted using Insertion Sort.");
         //arr.unhighlight([7, 15]).highlight([0, 8]);
         shellsort(arr, 8); // first sweep with increment 8
 
-        av.step().message('At the end of the first pass, the resulting array is "a little better sorted".');
+        av.step().umsg('At the end of the first pass, the resulting array is "a little better sorted".');
         arr.unhighlight();
         //arr.title("Array after sorting the sublists with increment 8:");
         //origarr.insertBefore(arr).show().title("Original Array:"); // add the origarr before (that is, above) the partly-sorted array
-        av.step().message("The second pass of Shellsort looks at fewer, bigger lists. For our example the second pass would have n/4 lists of size 4, with the increment being n/4 = 4. Thus, the second pass would have as its first sublist the 4 elements in positions 0, 4, 8, and 12…");
+        av.step().umsg("The second pass of Shellsort looks at fewer, bigger lists. For our example the second pass would have n/4 lists of size 4, with the increment being n/4 = 4. Thus, the second pass would have as its first sublist the 4 elements in positions 0, 4, 8, and 12…");
        // av.ds.variable("increment", 4); // set the value of variable increment to 4
         arr.css("opacity", 0.5).highlight([0, 4, 8, 12]); // on slide 10
 
-        av.step().message("... the second sublist would have elements in positions 1, 5, 9, and 13 ...");
+        av.step().umsg("... the second sublist would have elements in positions 1, 5, 9, and 13 ...");
         arr.unhighlight([0, 4, 8, 12]).highlight([1, 5, 9, 13]); // slide 11
 
-        av.step().message("and so on.");
+        av.step().umsg("and so on.");
         arr.unhighlight([1, 5, 9, 13]).highlight([2, 6, 10, 14]);
 
-        av.step().message("and so on.");
+        av.step().umsg("and so on.");
         arr.unhighlight([2, 6, 10, 14]).highlight([3, 7, 11, 15]);
 
-        av.step().message("Each sublist of four elements would also be sorted using an Insertion Sort.")
+        av.step().umsg("Each sublist of four elements would also be sorted using an Insertion Sort.")
         shellsort(arr, 4); // second sweep with increment 4
 
-        av.step().message("At the end of processing sublists with increment 4, the array is \"even more sorted\".");
+        av.step().umsg("At the end of processing sublists with increment 4, the array is \"even more sorted\".");
         arr.unhighlight();
 
-        av.step().message("The third pass would be made on sublists with increment 2. This means we process two lists, one consisting of the odd positions and the other consisting of the even positions.");
+        av.step().umsg("The third pass would be made on sublists with increment 2. This means we process two lists, one consisting of the odd positions and the other consisting of the even positions.");
       //  av.ds.variable("increment", 2); // set the value of variable increment to 2
         arr.highlight([0, 2, 4, 6, 8, 10, 12, 14]);
         arr.unhighlight([0, 2, 4, 6, 8, 10, 12, 14]).highlight([1, 3, 5, 7, 9, 11, 13, 15]);
         arr.unhighlight([1, 3, 5, 7, 9, 11, 13, 15]).highlight([0, 2, 4, 6, 8, 10, 12, 14]);
 
-        av.step().message("As usual, we sort the sublists using Insertion Sort.");
+        av.step().umsg("As usual, we sort the sublists using Insertion Sort.");
         arr.unhighlight();
         shellsort(arr, 2);
 
-        av.step().message("And here is the result of the third pass. The list is getting even more sorted!");
+        av.step().umsg("And here is the result of the third pass. The list is getting even more sorted!");
         arr.unhighlight();
 
-        av.step().message("The culminating pass in this example would be a \"normal\" Insertion Sort of all elements.");
+        av.step().umsg("The culminating pass in this example would be a \"normal\" Insertion Sort of all elements.");
         inssort2(arr, 0, 1);
 
-        av.step().message("Finally, the array is sorted.");
+        av.step().umsg("Finally, the array is sorted.");
         arr.unhighlight();
         $("#forward").click(function() {
           $("#container").trigger("forward");
