Moved util functions from array test to test/utils/arrayutils.js

--- a/test/index.html
+++ b/test/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" id="html">
+<!DOCTYPE html>
+<html id="html">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>JSAV Test Suite</title>
 	<link rel="stylesheet" media="screen" href="../lib/qunit/qunit/qunit.css" />
-	<link rel="stylesheet" href="../examples/jsav.css" media="screen" />
+	<link rel="stylesheet" href="../css/JSAV.css" media="screen" />
 	<!-- Includes -->
   <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
@@ -20,6 +20,7 @@
 
 	<script src="../lib/qunit/qunit/qunit.js"></script>
 	<script src="data/testrunner.js"></script>
+	<script src="utils/arrayutils.js"></script>
 
 	<script src="unit/core.js"></script>
 	<script src="unit/array.js"></script>
