--- a/test/index.html
+++ b/test/index.html
@@ -24,6 +24,7 @@
 
 	<script src="unit/core.js"></script>
 	<script src="unit/array.js"></script>
+	<script src="unit/anim.js"></script>
 </head>
 
 <body id="body">
