Refactoring of stylesheets

--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>ShellSort Performance</title>
-<link href="hypertextbook.css" title="CSS" rel="stylesheet" type="text/css">
-
+<link href="hypertextbook.css" title="CSS" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="../css/JSAV.css" type="text/css" />
 <style>
 body {
   width: 94%;
