--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -3,6 +3,7 @@
 <head>
   <title>Shellsort v0.0.01</title>
   <meta charset="utf-8" />
+  <link href="hypertextbook.css" title="CSS" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../css/JSAV.css" media="screen" />
 </head>
 <body>
@@ -10,6 +11,7 @@
   #container {
     width: 900px;
     height: 400px;
+    background-color: #eee;
   }
   p.output.line {
     height: 100px;
