Playing around with styling.

--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -7,10 +7,11 @@
 <style>
 body {
   width: 94%;
-  max-width: 1000px;
+  max-width: 900px;
   margin: 20px auto;
   border: 1px solid black;
   padding: 20px;
+  background-color: #efe;
 }
 #container {
   overflow: hidden;
@@ -24,6 +25,13 @@ body {
 #right {
   float: right;
   width: 35%;
+}
+
+div h1 {
+  background-color: #efe;
+}
+.jsavcontainer {
+  background-color: #efe;
 }
 </style>
 </head>
