--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -9,9 +9,12 @@
 <body>
 <style>
   #container {
-    width: 915px;
+    width: 880px;
     height: 400px;
     background-color: #efe;
+  }
+  #container .array {
+     left: -10px;
   }
   p.output.line {
     height: 100px;
