--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -31,10 +31,15 @@
 <script src="../build/JSAV.js"></script>
 <script>
   var LIGHT = "rgb(215, 215, 215)";  // For "greying out" array elements
-  var DARK = "black";       // Make array elements dark again
+  var DARK = "black";                // Make array elements dark again
+  // Convenience function for setting another type of highlight
+  // (will be used for showing insertion sort)
   var setBlue = function(index) {
     arr.css(index, {"background-color": "blue"});
   };
+  // Usage:
+  // setBlue([0, 9]); // Will set positions 0 and 9
+
   var av = new JSAV("container"); //containing HTML element with id container
   //var arr = av.ds.array($("#initialarray")),
   // HTML element containing the initial array, id initialarray
@@ -61,20 +66,26 @@
   arr.unhighlight([0, 8]).css([0, 8], {"color": LIGHT}).highlight([1, 9]);
   
   av.step();
-  setBlue([0, 9]);
   
   av.umsg("... and so on ...");
   for (var i=2; i<8; i++) { // loop through the rest of the array sublists
     av.step();
-    arr.unhighlight([i-1, i+7]).highlight([i, i+8]);
+    arr.unhighlight([i-1, i+7]).css([i-1, i+7], {"color": LIGHT}).highlight([i, i+8]);
   }
 
   av.step().umsg("Each of these sublists of length two is sorted using Insertion Sort.");
   arr.unhighlight([7, 15]);
-  //arr.unhighlight([7, 15]).highlight([0, 8]);
-  shellsort(arr, 8); // first sweep with increment 8
+  arr.css(function(index, item)
+    {return true; }, {"color": DARK});
+
+  av.step().av.umsg("Start sorting sweep");
+  
+  av.step().umsg("test 1");
+
+  sweep(arr, 8); // first sweep with increment 8
 
   av.step().umsg('At the end of the first pass, the resulting array is "a little better sorted".');
+  av.step().umsg("test 2");
   arr.unhighlight();
   //arr.title("Array after sorting the sublists with increment 8:");
   //origarr.insertBefore(arr).show().title("Original Array:"); // add the origarr before (that is, above) the partly-sorted array
@@ -93,7 +104,7 @@
   arr.unhighlight([2, 6, 10, 14]).highlight([3, 7, 11, 15]);
 
   av.step().umsg("Each sublist of four elements would also be sorted using an Insertion Sort.");
-  shellsort(arr, 4); // second sweep with increment 4
+  sweep(arr, 4); // second sweep with increment 4
 
   av.step().umsg("At the end of processing sublists with increment 4, the array is \"even more sorted\".");
   arr.unhighlight();
@@ -106,7 +117,7 @@
 
   av.step().umsg("As usual, we sort the sublists using Insertion Sort.");
   arr.unhighlight();
-  shellsort(arr, 2);
+  sweep(arr, 2);
 
   av.step().umsg("And here is the result of the third pass. The list is getting even more sorted!");
   arr.unhighlight();
@@ -124,27 +135,27 @@
   });
   av.recorded();
 
-  // partial shellsort. sweep with the given increment
-  function shellsort(myarr, incr) {
+  // Partial Shellsort. Sweep with the given increment
+  function sweep(myarr, incr) {
     var j = 0;
     for (; j<incr; j++) {         // Sort each sublist
-      av.substep();
-      myarr.highlight(function(index, item) { return index%j === 0;}); // a function for highlight that will highlight all indices for which it returns true
-      inssort2(myarr, j, incr);
+      // Highlight the sublist
+      myarr.highlight(function(index, item) { return index%incr === j;});
+      inssort(myarr, j, incr);
       av.step();
       myarr.unhighlight();
-      myarr.css(function(index, item) { return index%j === 0;}, {"color": "green"}); // a function for css that will style all indices for which it returns true
+      myarr.css(function(index, item) { return index%incr === j;}, {"color": "green"});
       av.stepdone();
     }
-    //inssort2(arr, 0, 1);     // Could call regular inssort here
   }
 
-  function inssort2(myarr, start, incr) {
-    for (var i=start+incr; i<myarr.size(); i+=incr) {
-      for (var j=i; j>=incr && (myarr.value(j) < myarr.value(j-incr)); j-=incr) {
-        // should we highlight the compared items first?
+  // Insertion sort using increments
+  function inssort(A, start, incr) {
+    var i, j;
+    for (i=start+incr; i<A.size(); i+=incr) {
+      for (j=i; j>=incr && (myarr.value(j) < myarr.value(j-incr)); j-=incr) {
         av.substep(); // create new substeps for each swap
-        myarr.swap(j, j-incr); // swap the two indices
+        A.swap(j, j-incr); // swap the two indices
         av.stepdone();
       }
     }
