--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -35,10 +35,8 @@
   // Convenience function for setting another type of highlight
   // (will be used for showing insertion sort)
   var setBlue = function(index) {
-    arr.css(index, {"background-color": "blue"});
+    arr.css(index, {"background-color": "#ddf" });
   };
-  // Usage:
-  // setBlue([0, 9]); // Will set positions 0 and 9
 
   var av = new JSAV("container"); //containing HTML element with id container
   av.SPEED = 200;
@@ -54,7 +52,8 @@
   //var arr = av.ds.array($("#initialarray")),
   // HTML element containing the initial array, id initialarray
   // alternatively, generate from data: 
-  var arr = av.ds.array([20, 30, 12, 54, 55, 11, 78, 14, 13, 79, 44, 98, 76, 45, 32, 11]);
+  var arr = av.ds.array([20, 30, 12, 54, 55, 11, 78, 14, 13, 79, 44,
+      98, 76, 45, 32, 11], {indexed: true});
   // or, generate from random data: var arr = av.ds.array.random(10);
   // size as param, range as params as well??
 
@@ -70,70 +69,89 @@
   arr.unhighlight([0, 8]).css([0, 8], {"color": LIGHT}).highlight([1, 9]);
   
   av.step().umsg("... and so on ...");
-/////////////////////////////////////////
-// CUT OUT TO SAVE TIME, RESTORE LATER
-//  for (var i=2; i<8; i++) { // loop through the rest of the array sublists
-//    av.step();
-//    arr.unhighlight([i-1, i+7]).css([i-1, i+7], {"color": LIGHT}).highlight([i, i+8]);
-//  }
+  for (var i=2; i<8; i++) { // loop through the rest of the array sublists
+    av.step();
+    arr.unhighlight([i-1, i+7]).css([i-1, i+7], {"color": LIGHT}).highlight([i, i+8]);
+  }
 
   av.step().umsg("Each of these sublists of length two is sorted using Insertion Sort.");
   arr.unhighlight([7, 15]).css([7, 15], {"color": LIGHT});
 
   sweep(arr, 8); // first sweep with increment 8
 
-av.step().umsg('At the end of the first pass, the resulting array is "a little better sorted".');
+  av.step().umsg('At the end of the first pass, the resulting array is "a little better sorted".');
 
-console.log(arr);
+  arr.unhighlight();
 
-console.log(origarr);
-
-  for (i=0; i<16; i++) {
-//    if (arr[i] !== origarr[i]) {
-      arr.css(i, {"color": "green"});
-//    }
-  }
-
+  arr.css(function(i, item)
+    { return arr.value(i) !== origarr.value(i); }, {"color": "#0f0"});
 
   var arrlabel = av.label("Values in green were swapped during this pass", {before: arr});
   origarr.show();
   var origlabel = av.label("Original Array:", {before: origarr});
 
-//  arr.unhighlight();
-
   av.step().umsg("The second pass of Shellsort looks at fewer, bigger lists. For our example the second pass would have n/4 lists of size 4, with the increment being n/4 = 4. Thus, the second pass would have as its first sublist the 4 elements in positions 0, 4, 8, and 12...");
+
+  origarr.hide();
+  origlabel.hide();
+  arrlabel.hide();
+
   // av.ds.variable("increment", 4); // set the value of variable increment to 4
   arr.css(function(index, item)
-    { return index%4 != 0;}, {"color": LIGHT}).highlight([0, 4, 8, 12]); // on slide 10
+    { return index%4 != 0;}, {"color": LIGHT}).highlight([0, 4, 8, 12]);
 
   av.step().umsg("... the second sublist would have elements in positions 1, 5, 9, and 13 ...");
-  arr.unhighlight([0, 4, 8, 12]).highlight([1, 5, 9, 13]); // slide 11
+  arr.unhighlight([0, 4, 8, 12]).css([0, 4, 8, 12], {"color": LIGHT}).highlight([1, 5, 9, 13]);
 
   av.step().umsg("and so on.");
-  arr.unhighlight([1, 5, 9, 13]).highlight([2, 6, 10, 14]);
+  arr.unhighlight([1, 5, 9, 13]).css([1, 5, 9, 13], {"color": LIGHT}).highlight([2, 6, 10, 14]);
 
   av.step().umsg("and so on.");
-  arr.unhighlight([2, 6, 10, 14]).highlight([3, 7, 11, 15]);
+  arr.unhighlight([2, 6, 10, 14]).css([2, 6, 10, 14], {"color": LIGHT}).highlight([3, 7, 11, 15]);
 
   av.step().umsg("Each sublist of four elements would also be sorted using an Insertion Sort.");
+
+  arr.unhighlight([3, 7, 11, 15]).css([3, 7, 11, 15], {"color": LIGHT});
+
   sweep(arr, 4); // second sweep with increment 4
 
   av.step().umsg("At the end of processing sublists with increment 4, the array is \"even more sorted\".");
 
+  arr.css(function(i, item)
+    { return arr.value(i) !== origarr.value(i); }, {"color": "#0f0"});
+
+  arrlabel.show();
+  origarr.show();
+  origlabel.show();
+
   av.step().umsg("The third pass would be made on sublists with increment 2. This means we process two lists, one consisting of the odd positions and the other consisting of the even positions.");
+
+  origarr.hide();
+  origlabel.hide();
+  arrlabel.hide();
+
   //  av.ds.variable("increment", 2); // set the value of variable increment to 2
+
   arr.highlight([0, 2, 4, 6, 8, 10, 12, 14]);
+  av.step();
   arr.unhighlight([0, 2, 4, 6, 8, 10, 12, 14]).highlight([1, 3, 5, 7, 9, 11, 13, 15]);
+  av.step();
   arr.unhighlight([1, 3, 5, 7, 9, 11, 13, 15]).highlight([0, 2, 4, 6, 8, 10, 12, 14]);
 
   av.step().umsg("As usual, we sort the sublists using Insertion Sort.");
   arr.unhighlight();
+
+  av.step();
   sweep(arr, 2);
 
   av.step().umsg("And here is the result of the third pass. The list is getting even more sorted!");
   arr.unhighlight();
 
   av.step().umsg("The culminating pass in this example would be a \"normal\" Insertion Sort of all elements.");
+
+  arr.highlight();
+  av.step();
+
   inssort(arr, 0, 1);
 
   av.step().umsg("Finally, the array is sorted.");
@@ -170,12 +188,16 @@ console.log(origarr);
     var i, j;
     for (i=start+incr; i<A.size(); i+=incr) {
       setBlue(i);
+      av.step();
       for (j=i; j>=incr && (A.value(j) < A.value(j-incr)); j-=incr) {
         A.swap(j, j-incr); // swap the two indices
-	arr.highlight(j);
+        av.step();
+
 	setBlue(j-incr);
+	arr.highlight(j);
         av.step();
       }
+      arr.highlight(j);
     }
   }
 
