--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -70,8 +70,7 @@ console.log("Doh");
       98, 76, 45, 32, 11], {indexed: true});
   // or, generate from random data: var arr = av.ds.array.random(10);
   // size as param, range as params as well??
-  var arrlabel = av.label("Values in <b style='color:#0f0;'>green</b> were swapped during this pass", {before: arr});
-  arrlabel.hide();
+  var arrlabel = av.label("&nbsp;", {before: arr});
 
   origarr = arr.clone(); // clone for showing the array comparison, not added to document yet (not shown)
 
@@ -102,15 +101,15 @@ console.log("Doh");
   arr.css(function(i, item)
     { return arr.value(i) !== origarr.value(i); }, {"color": "#0f0"});
 
+  arrlabel._setText("Values in <b style='color:#0f0;'>green</b> were swapped during this pass");
   origarr.show();
   var origlabel = av.label("Original Array:", {before: origarr});
-  arrlabel.show();
 
   av.step().umsg("The second pass of Shellsort looks at fewer, bigger lists. For our example the second pass would have n/4 lists of size 4, with the increment being n/4 = 4. Thus, the second pass would have as its first sublist the 4 elements in positions 0, 4, 8, and 12...");
 
+  arrlabel._setText("&nbsp;");
   origarr.hide();
   origlabel.hide();
-  arrlabel.hide();
 
   // av.ds.variable("increment", 4); // set the value of variable increment to 4
   arr.css(function(index, item)
@@ -136,15 +135,15 @@ console.log("Doh");
   arr.css(function(i, item)
     { return arr.value(i) !== origarr.value(i); }, {"color": "#0f0"});
 
-  arrlabel.show();
+  arrlabel._setText("Values in <b style='color:#0f0;'>green</b> were swapped during this pass");
   origarr.show();
   origlabel.show();
 
   av.step().umsg("The third pass would be made on sublists with increment 2. This means we process two lists, one consisting of the odd positions and the other consisting of the even positions.");
 
+  arrlabel._setText("&nbsp;");
   origarr.hide();
   origlabel.hide();
-  arrlabel.hide();
 
   //  av.ds.variable("increment", 2); // set the value of variable increment to 2
 
